tests/dataset/tpc-ds/compiler/c/q60.error
/tmp/q60.c: In function ‘main’:
/tmp/q60.c:181:19: warning: initialization of ‘int’ from ‘store_sale_t *’ makes integer from pointer without a cast [-Wint-conversion]
  181 |   int all_sales = store_sales union catalog_sales union web_sales;
      |                   ^~~~~~~~~~~
/tmp/q60.c:181:31: error: expected ‘,’ or ‘;’ before ‘union’
  181 |   int all_sales = store_sales union catalog_sales union web_sales;
      |                               ^~~~~
/tmp/q60.c:182:28: error: incompatible type for argument 1 of ‘_sum_int’
  182 |   double result = _sum_int(0);
      |                            ^
      |                            |
      |                            int
/tmp/q60.c:63:30: note: expected ‘list_int’ but argument is of type ‘int’
   63 | static int _sum_int(list_int v) {
      |                     ~~~~~~~~~^
